--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -24,12 +24,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      - uses: gautamkrishnar/keepalive-workflow@v1 # using the workflow with default settings
       - name: Run Project
         run: |
           cd workflows
           yarn
           yarn checkin
+          
+  KeepAlive:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: KeepAlive
+        uses: gautamkrishnar/keepalive-workflow@master
+        with: 
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          trigger-workflow: Auto
 #  SeaGold:
 #    needs: CheckIn
 #    runs-on: ubuntu-latest
