--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: KeepAlive
-        uses: lihongyuan99/keepalive-workflow@master
+        uses: gautamkrishnar/keepalive-workflow@v1
         with: 
           repo-token: ${{ secrets.MY_TOKEN }}
           trigger-workflow: Auto
