--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -36,18 +36,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: KeepAlive
-        uses: gautamkrishnar/keepalive-workflow@v1
+      - uses: actions/checkout@v3
         with: 
           repo-token: ${{ secrets.MY_TOKEN }}
           trigger-workflow: Auto
-#  SeaGold:
-#    needs: CheckIn
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: actions/setup-node@v2
-#      - name: Run Project
-#        run: |
-#          cd workflows
-#          yarn
-#          yarn seagold
+  workflow-keepalive:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: liskin/gh-workflow-keepalive@v1
